LOgin and Register API Integration

--- a/src/app/pages/public/login/login.component.html
+++ b/src/app/pages/public/login/login.component.html
@@ -22,20 +22,18 @@
       </div>
       <div class="p-5 bg-white md:flex-1">
         <h3 class="my-4 text-2xl font-semibold text-gray-700">Account Login</h3>
-        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="flex flex-col space-y-5">
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit(loginForm.controls)" class="flex flex-col space-y-5">
           <div class="flex flex-col space-y-1">
-            <label for="email" class="text-sm font-semibold text-gray-500">Email address</label>
+            <label for="userCredentials" class="text-sm font-semibold text-gray-500">Email address</label>
             <input
               type="email"
-              id="email"
-              name="email"
-              formControlName="email"
+              id="userCredentials"
+              name="userCredentials"
+              formControlName="userCredentials"
               class="px-4 py-2 transition duration-300 border border-gray-300 rounded focus:border-transparent focus:outline-none focus:ring-4 focus:ring-blue-200"
             />
-            <p *ngIf="getLoginForm.email.hasError('required') && getLoginForm.email.touched"
-                        class="text-red-600 text-sm">Email is Required !</p>
-                    <p *ngIf="getLoginForm.email.hasError('email')" class="text-red-600  text-sm">Please Enter
-                        Valid Email Address .</p>
+            <p *ngIf="getLoginForm.userCredentials.hasError('required') && getLoginForm.userCredentials.touched"
+                        class="text-red-600 text-sm">Please Enter Email or username  is Required !</p>
           </div>
           <div class="flex flex-col space-y-1">
             <div class="flex items-center justify-between">
