--- a/src/app/pages/studio/studio.component.html
+++ b/src/app/pages/studio/studio.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<div class="flex h=[100vh] overflow-hidden">
+    <app-sidebar></app-sidebar>
+    <main class="w-full ml-[270px] p-4 overflow-auto">
+        <router-outlet></router-outlet>
+    </main>
+</div>
