Make Dashboard UI

--- a/src/app/pages/studio/components/sidebar/sidebar.component.html
+++ b/src/app/pages/studio/components/sidebar/sidebar.component.html
@@ -1,9 +1,6 @@
-<div class="min-h-screen flex flex-col flex-auto flex-shrink-0 antialiased bg-gray-50 text-gray-800">
-  <div class="fixed flex flex-col top-0 left-0 w-64 bg-white h-full border-r">
-    <div class="flex items-center justify-center h-14 border-b">
-      <div>Logo</div>
-    </div>
-    <div class="overflow-y-auto overflow-x-hidden flex-grow">
+<div class="min-h-screen flex flex-col flex-auto flex-shrink-0 antialiased bg-gray-50 text-gray-800" id="sidebar">
+  <div class="fixed flex flex-col top-0 left-0 bg-white h-full border-r mt-16 main-nav-container-open" id="mainNav">
+    <div class="overflow-y-auto overflow-x-hidden flex-grow main-nav">
       <ul class="flex flex-col py-4 space-y-1 px-3">
         <li>
           <a routerLink="/studio/dashboard" routerLinkActive="active"
@@ -32,7 +29,7 @@
                 </path>
               </svg>
             </span>
-            <span class="ml-2 text-sm tracking-wide truncate">Inbox</span>
+            <span class="ml-2 text-sm tracking-wide truncate">Assets</span>
           </a>
         </li>
         <!-- <li>
