--- a/src/app/pages/studio/dashboard/dashboard.component.html
+++ b/src/app/pages/studio/dashboard/dashboard.component.html
@@ -1,1 +1,37 @@
-<p>dashboard works!</p>
+<div id="dashboardPage">
+    <div class="header-section flex flex-wrap justify-between items-center my-7">
+        <p class="flex items-center text-gray-800 dark:text-white font-bold text-2xl">
+            Welcome Mr.Raj Maisuriya
+        </p>
+
+        <button class="transition-all bg-gray-800 hover:bg-gray-700 hover:scale-95 text-white font-semibold py-3 px-5 rounded-lg text-[14px]">
+            Add Template
+        </button>
+    </div>
+
+    <div class="container">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+            <div *ngFor="let i of [1,2,3,4,5,6,7,8,9]"
+                class="flex flex-col justify-center border border-gray-200 rounded-lg bg-white shadow-md overflow-hidden hover:shadow-lg transition duration-300 relative">
+                <img src="../../../../assets/images/card-cover1.jpg" alt="Card Cover" class="w-full h-48 object-cover">
+                <button class="text-lg transition-all hover:text-2xl"><i class="bi bi-three-dots-vertical absolute top-1 right-1"></i></button>
+                <div class="p-4">
+                    <p class="text-lg font-bold text-gray-800 truncate">Template Title</p>
+
+                    <div class="flex justify-between items-center mt-4 h-fit">
+                        <span
+                            class="text-[12px] text-green-700 bg-green-100 py-1 px-3 rounded-full font-medium">Published</span>
+
+                        <button
+                            class="flex items-center text-[15px] text-indigo-600 bg-indigo-100 py-[2px] px-2 rounded-md border border-indigo-300 hover:bg-indigo-200 hover:text-indigo-800 transition">
+                            <i class="bi bi-eye"></i>
+                        </button>
+                    </div>
+
+                    <p class="text-[12px] mt-4 text-gray-500">Last updated 4 minutes ago</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
