--- a/src/app/pages/studio/studio.component.html
+++ b/src/app/pages/studio/studio.component.html
@@ -1,6 +1,18 @@
-<div class="flex h=[100vh] overflow-hidden">
+<!-- <div class="flex h=[100vh] overflow-hidden">
     <app-sidebar></app-sidebar>
-    <main class="w-full ml-[270px] p-4 overflow-auto">
+    <main class="w-full ml-[270px] my-14 p-4 overflow-auto">
+        <app-header></app-header>
         <router-outlet></router-outlet>
     </main>
-</div>
+</div> -->
+<div class="flex h-[100vh] overflow-hidden">
+    <app-sidebar></app-sidebar>
+    <div class="flex flex-col w-full">
+      <!-- Header should be outside the main content -->
+      <app-header></app-header>
+      
+      <main class="flex-grow bg-gray-100  mt-16 p-4 lg:ml-[270px] overflow-auto">
+        <router-outlet></router-outlet>
+      </main>
+    </div>
+  </div>
