Add Template Flow

--- a/src/app/pages/studio/components/header/header.component.html
+++ b/src/app/pages/studio/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="fixed top-0 left-0 w-full z-50 bg-white border-b-[1]">
+<header class="fixed top-0 left-0 w-full z-50 bg-white border">
   <nav class="bg-white dark:bg-gray-800 border-b border-gray-200 dark:border-gray-700 px-4 lg:px-6 py-2.5">
     <div class="flex flex-wrap justify-between items-center">
       <!-- Left Section: Logo/Brand -->
