--- a/src/app/pages/studio/components/sidebar/sidebar.component.html
+++ b/src/app/pages/studio/components/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <div class="min-h-screen flex flex-col flex-auto flex-shrink-0 antialiased bg-gray-50 text-gray-800" id="sidebar">
-  <div class="fixed flex flex-col top-0 left-0 bg-white h-full border-r mt-16 main-nav-container-open" id="mainNav">
+  <div class="fixed flex flex-col top-0 left-0 bg-white h-full border-r mt-[4.3rem] main-nav-container-open" id="mainNav">
     <div class="overflow-y-auto overflow-x-hidden flex-grow main-nav">
       <ul class="flex flex-col py-4 space-y-1 px-3">
         <li>
