--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,5 @@
 *{
     font-family: "Poppins", serif;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
