--- a/src/app/pages/studio/dashboard/dashboard.component.html
+++ b/src/app/pages/studio/dashboard/dashboard.component.html
@@ -17,7 +17,7 @@
                     </div>
                 </div>
             </div>
-            <div
+            <!-- <div
                 class="flex cursor-pointer flex-col justify-center border border-gray-200 rounded-lg bg-white shadow-md overflow-hidden hover:shadow-lg transition duration-300 relative">
                 <div class="p-6 flex transition-all text-gray-800 hover:bg-gray-800 hover:text-white items-center">
                     <div class="p-3 border rounded-full mr-4"><i class="bi bi-cloud-download"></i></div>
@@ -26,7 +26,7 @@
                         <p class="text-[12px] mt-2 text-gray-500">Import Json</p>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
         <div class=" flex flex-wrap justify-between items-center my-5">
             <p class="flex items-center font-medium text-gray-800 dark:text-white text-sm">
@@ -39,18 +39,18 @@
             </button> -->
         </div>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
-            <div *ngFor="let i of [1,2,3,4,5,6,7,8,9]"
+            <div *ngFor="let item of templateList"
                 class="flex flex-col justify-center border border-gray-200 rounded-lg bg-white shadow-md overflow-hidden hover:shadow-lg transition duration-300 relative">
-                <img src="../../../../assets/images/card-cover2.jpg" alt="Card Cover" class="w-full h-48 object-cover">
+                <img [src]="item.template_thumbnail" alt="Card Cover" class="w-full h-48 object-cover">
                 <div class="p-4">
-                    <p class="text-lg font-bold text-gray-800 truncate">Template Title</p>
+                    <p class="text-lg font-bold text-gray-800 truncate">{{item.template_title}}</p>
 
                     <div class="flex justify-between items-center mt-4 h-fit">
                         <span
                             class="text-[12px] text-green-700 bg-green-100 py-1 px-3 rounded-full font-medium">Published</span>
 
                         <div class="flex">
-                            <button
+                            <button (click)="previewTemplate(item._id)"
                                 class="flex mr-2 items-center text-[15px] text-indigo-600 bg-indigo-100 py-[2px] px-2 rounded-md border border-indigo-300 hover:bg-indigo-200 hover:text-indigo-800 transition">
                                 <i class="bi bi-eye"></i>
                             </button>
@@ -61,7 +61,8 @@
                         </div>
                     </div>
 
-                    <p class="text-[12px] mt-4 text-gray-500">Last updated 4 minutes ago</p>
+                    <p class="text-[12px] mt-4 text-gray-500" *ngIf="!item.is_default">Last updated 4 minutes ago</p>
+                    <p class="text-[12px] mt-4 text-gray-500" *ngIf="item.is_default">Quick Edit</p>
                 </div>
             </div>
 
